DeployApp-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moneyapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: moneyapp
  template:
    metadata:
      labels:
        app: moneyapp
    spec:
      containers:
       - name: frontend
         image:  goharymo/moneyapp_frontend
         ports:
          - containerPort: 80


       - name: backend
         image:  goharymo/moneyapp_backend
         ports:
          - containerPort: 3000
