DeployApp-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moneyapp-service
spec:
  selector:
    app: moneyapp
  ports:
  - name: frontend
    port: 80
    targetPort: 80
  - name: backend
    port: 3000
    targetPort: 3000
  type: NodePort
